ADD: ELEMENT VACIO

--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,9 @@
+*{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 .board{
     
     display: grid;
@@ -6,6 +12,11 @@
     width: 310px;
     margin: 120px auto;
 
+}
+
+body{
+    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    background-color: aquamarine;
 }
 
 
