--- a/styles.css
+++ b/styles.css
@@ -84,3 +84,36 @@ body{
     font-weight: bold;
     font-size: 32px;
 }
+.first-screen  img{
+    width: 350px;
+    height: 350px;
+    cursor: pointer;
+
+}
+
+.startBtn-container{
+    border: 2px solid white;
+
+
+}
+
+.play-btn{
+     width: 280px;
+     height: 60px;
+     font-size: 18px;
+
+}#playbtn{
+    color: black;
+    width: 280px;
+    height: 60px;
+    font-size: 18px; 
+    cursor: pointer;
+}
+
+#pausebtn{
+    color: black;
+    width: 280px;
+    height: 60px;
+    font-size: 18px; 
+    cursor: pointer;
+}
