--- a/styles.css
+++ b/styles.css
@@ -50,8 +50,8 @@ body{
 }
 #container {
 	/* Center the text in the viewport. */
-	position: absolute;
-	margin: auto;
+	/*position: absolute;
+	margin: auto;*/
 	width: 100vw;
 	height: 80pt;
 	top: 0;
@@ -70,7 +70,7 @@ body{
 	font-family: 'Raleway', sans-serif;
 	font-size: 80pt;
 	
-	text-align: center;
+	/*text-align: center;*/
 
 	
 	user-select: none;
